# BeforeShutdown

./: .gitignore  BeforeShutdown.spec  README.md  __main__.py  pyproject.toml
.github/workflows/: python-app.yml
before_shutdown/: __init__.py  closeall.ps1  config.txt  main.py  template.txt
